--- a/styles.css
+++ b/styles.css
@@ -12,4 +12,7 @@ h1{
     border-radius: 50%;
     background-color: yellow;
     margin: auto;
+    text-align: center;
+    font-size: 22px;
+    font-weight: bold;
 }
