--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
-body{
+body {
     background-color: black;
 }
 
-h1{
+h1 {
     color: white;
 }
 
-.ball{
+.ball {
     width: 100px;
     height: 100px;
     border-radius: 50%;
@@ -15,4 +15,8 @@ h1{
     text-align: center;
     font-size: 22px;
     font-weight: bold;
+    transition:
+        width 1s,
+        height 1s;
+
 }
