--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,18 @@ h1 {
         height 1s;
 
 }
+
+.ball2 {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: red;
+    margin: auto;
+    margin-top: 20px;
+    text-align: center;
+    font-size: 22px;
+    font-weight: bold;
+    transition:
+        width 1s,
+        height 1s;
+}
